<?xml version="1.0"?>
<package>
  <name>rtklibros</name>
  <version>0.0.0</version>
  <description>RTKLIB ROS</description>
  <maintainer email="shim36145@kaist.ac.kr">youngbo Shim</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


